Adds JUnit platform launcher dependency
Adds the JUnit platform launcher as a test runtime dependency.
Removes the custom task to run with JavaFX modules since it's unnecessary.